--- a/src/assets/chat.css
+++ b/src/assets/chat.css
@@ -45,6 +45,21 @@ ul li {
     color: #fff;
 }
 
+.me-timestamp,
+.them-timestamp {
+  padding: 0;
+  font-size: 10px;
+  color: gray;
+}
+
+.me-timestamp {
+  float: right;
+}
+
+.them-timestamp {
+  float: left;
+}
+
 .input-group {
     margin-bottom: 0;
 }
